# openai-baml-adapter

./: .gitignore  Dockerfile  README.md  debug_request.py  fly.toml  main.py  pyproject.toml  server.py
openai_baml_adapter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openai_baml_adapter/api/: main.py
openai_baml_adapter/baml_client/baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
openai_baml_adapter/baml_src/: clients.baml  function.baml  generators.baml
openai_baml_adapter/core/: handler.py  parse.py
openai_baml_adapter/models/: openai.py
tests/: test_completions.py
