[project]
name = "openai-baml-adapter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "baml_py >= 0.202.1",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
    "pytest>=8.3.0",
    "httpx>=0.28.0",
    "pytest-asyncio>=0.24.0",
]
